Fixed tap and hold on mobile highlighting button

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,8 @@ button {
   border: none;
   border-right: 1px solid black;
   background-color: lightgray;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 /*Grid Board*/
